compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__block.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
assertion_line: 21
expression: "\nfn go() {\n  let x = {\n    1\n    2\n  }\n  x\n}\n"
---
module rec my.``mod``
let go(): int = begin
    let x = begin
        1
        2
    end
    x
end
