compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__block_with_parenthesised_expression_returning_from_function.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
assertion_line: 224
expression: "\nfn b() {\n  {\n    1 + 2\n  }\n}\n"
---
module rec my.``mod``
let private b (): int = begin
    begin
        1 + 2
    end
end
