compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__nested_multiexpr_blocks.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
assertion_line: 52
expression: "\nfn go() {\n  let x = {\n    1\n    {\n      2\n      3\n    }\n  }\n  x\n}\n"
---
module rec my.``mod``
let go(): int = begin
    let x = begin
        1
        begin
            2
            3
        end
    end
    x
end
