compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__nested_multiexpr_non_ending_blocks.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
expression: "\nfn go() {\n  let x = {\n    1\n    {\n      2\n      3\n    }\n    4\n  }\n  x\n}\n"
---
module rec my.``mod``
let private go () = begin
    let x = begin
        1
        begin
            2
            3
        end
        4
    end
    x
end
