compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__nested_simple_blocks.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
expression: "\nfn go() {\n  let x = {\n    {\n      3\n    }\n  }\n  x\n}\n"
---
module rec my.``mod``

let private go () = begin
    let x = begin
        begin
            3L
        end
    end
    x
end
