compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__sequences.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
assertion_line: 130
expression: "\nfn go() {\n  \"one\"\n  \"two\"\n  \"three\"\n}\n"
---
module rec my.``mod``
let go(): string = begin
    "one"
    "two"
    "three"
end
